2008-07-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: document bug 019
	* src/modules/sth.c: fix for bug 019

	* doc/manual/bugs.texi: document bug 018
	* src/modules/sth.c: fix for bug 018
	* src/test/test-streams.c: test cases for bug 018 and general
	  corrections

2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/streams.refs: update references

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/streams.refs: update references

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* streams.lsm.in: updates for release
	* streams.spec.in: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/streams-core.postinst.in: updates for release
	* debian/streams-core.postrm.in: updates for release
	* debian/streams-core.preinst.in: updates for release
	* debian/streams-core.prerm.in: updates for release
	* debian/streams-init.postinst.in: updates for release
	* debian/streams-init.preinst.in: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* doc/manual/prerequisites.texi: added strx25 sub-package
	* tests/dummy1.m4: corrected headers
	* tests/dummy2.m4: corrected headers
	* tests/dummy3.m4: corrected headers
	* tests/dummy4.m4: corrected headers

2008-04-28  Brian Bidulock  <bidulock@openss7.org>

	* streams.spec.in: updates for release
	* doc/man/streams.refs: updates for release

	* debian/mscript_header.in: updated headers for release
	* debian/mscript_postinst.in: updated headers for release
	* debian/mscript_postrm.in: updated headers for release
	* debian/mscript_preinst.in: updated headers for release