@@ -1,7 +1,7 @@
 dnl vim: ft=config sw=4 noet nocin com+=b\:dnl fo+=or tw=78
 dnl ==========================================================================
 dnl 
-dnl @(#) $RCSfile: testsuite-streams.at,v $ $Name:  $($Revision: 0.9.2.52 $) $Date: 2008-04-28 12:54:13 $
+dnl @(#) $RCSfile: testsuite-streams.at,v $ $Name:  $($Revision: 0.9.2.53 $) $Date: 2008/07/26 01:52:26 $
 dnl
 dnl --------------------------------------------------------------------------
 dnl
@@ -61,7 +61,7 @@ dnl Corporation at a fee.  See http://www.openss7.com/
 dnl
 dnl --------------------------------------------------------------------------
 dnl
-dnl Last Modified $Date: 2008-04-28 12:54:13 $ by $Author: brian $
+dnl Last Modified $Date: 2008/07/26 01:52:26 $ by $Author: brian $
 dnl
 dnl ==========================================================================
 
@@ -1943,6 +1943,11 @@ AT_KEYWORDS([streams read RNORM])
 AT_CHECK([test_streams 3.1.11.3], [], [ignore], [], [], [])
 AT_CLEANUP
 
+AT_SETUP([posix streams test 3.1.11.4])
+AT_KEYWORDS([streams read RNORM])
+AT_CHECK([test_streams 3.1.11.4], [], [ignore], [], [], [])
+AT_CLEANUP
+
 AT_SETUP([posix streams test 3.1.12.1])
 AT_KEYWORDS([streams read RMSGD])
 AT_CHECK([test_streams 3.1.12.1], [], [ignore], [], [], [])
@@ -2774,6 +2779,9 @@ dnl AT_CLEANUP
 dnl ==========================================================================
 dnl
 dnl $Log: testsuite-streams.at,v $
+dnl Revision 0.9.2.53  2008/07/26 01:52:26  brian
+dnl - document, fix and test case for bug 016
+dnl
 dnl Revision 0.9.2.52  2008-04-28 12:54:13  brian
 dnl - update file headers for release
 dnl
