@@ -1,3 +1,10 @@
+2008-07-26  Brian Bidulock  <bidulock@openss7.org>
+
+	* doc/man/man2/read.2s.man: sp corrections
+	* src/modules/sth.c: implemented fix for bug 016
+	* src/test/test-streams.c: added test case for bug 016
+	* tests/testsuite-streams.at: added test case for bug 016
+
 2008-07-25  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/manual/bugs.texi: document bug 019
